<!--
  ~ Copyright 2019 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="test_details_title">Details</string>
    <string name="text_empty_test_details">No test details</string>

    <!--error_view TODO: Remove and use from module-->
    <string name="error_view_oops_message">Oops</string>
    <string name="error_view_retry_button_text">TRY AGAIN</string>
    <string name="error_view_error_text">There\'s an error loading the page</string>
</resources>
