<!--
  ~ Copyright 2019 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="teamcityapp.features.test_details.viewmodel.TestDetailsViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.TestDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/red"
                app:navigationIcon="@drawable/ic_close_white_24dp"
                app:setNavigationOnClickListener="@{() -> vm.finish.invoke()}"
                app:title="@string/test_details_title"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <WebView
            android:id="@+id/test_occurrence_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{vm.testDetailsVisibility}"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:testDetails="@{vm.testDetailsText}" />

        <ProgressBar
            android:id="@+id/progress_wheel"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="@{vm.progressVisibility}"
            tools:visibility="gone" />

        <tr.xip.errorview.ErrorView
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="@{vm.errorVisibility}"
            app:ev_imageTint="@color/sub_text_color"
            app:ev_retryColor="@color/main_text_color"
            app:ev_retryText="@string/error_view_retry_button_text"
            app:ev_subtitle="@string/error_view_error_text"
            app:ev_subtitleColor="@color/sub_text_color"
            app:ev_title="@string/error_view_oops_message"
            app:ev_titleColor="@color/main_text_color"
            app:retryListener="@{vm}"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/empty"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_empty_test_details"
            android:visibility="@{vm.emptyVisibility}"
            tools:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
